Added a Picture of a chef on index page index.html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 </head>
 <body>
     <h1>Odin projects</h1>
+    <img src="https://thumbs.dreamstime.com/b/chef-garnish-dish-14985711.jpg" alt="Image of a chef">
+    <h4><b>Collection of Some easy to made recipes!!</b></h4>
     <ul>
         <li><a href="recipes/lasagna.html" target="_blank">Lasagna Dish</a></li>
         <li><a href="recipes/Butter_Noodles.html">Butter Noodles</a></li>
