Typo where Pasta page redirectes to Lasagna is corrected index.html

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <ul>
         <li><a href="recipes/lasagna.html" target="_blank">Lasagna Dish</a></li>
         <li><a href="recipes/Butter_Noodles.html">Butter Noodles</a></li>
-        <li><a href="recipes/lasagna.html">Pasta</a></li>
+        <li><a href="recipes/Pasta.html">Pasta</a></li>
     </ul>
     
     
